arrumei botoes de pesquisa, e usuario + prettier

--- a/src/main/resources/static/css/shop.css
+++ b/src/main/resources/static/css/shop.css
@@ -1,119 +1,121 @@
 a:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 #meio {
-    display: flex;
-    background-color: beige;
-    height: 100%;
-    width: 100%;
+  display: flex;
+  background-color: beige;
+  height: 100%;
+  width: 100%;
 }
 
 nav {
-    display: flex;
-    flex-direction: column;
-    background-color: transparent;
-    height: 800px;
-    width: 340px;
+  display: flex;
+  flex-direction: column;
+  background-color: transparent;
+  height: 800px;
+  width: 340px;
 }
 
 .filtro-produto {
-    font-weight: bold;
-    margin-top: 8px;
-    color: rgb(117, 14, 17);
+  font-weight: bold;
+  margin-top: 8px;
+  color: rgb(117, 14, 17);
 }
 
 .titulo-filtro {
-    margin-left: 8px;
+  margin-left: 8px;
 }
 
 #tamanhos-itens {
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    background-color: transparent;
-    justify-content: space-evenly;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  background-color: transparent;
+  justify-content: space-evenly;
 }
 
 .tamanho {
-    height: 32px;
-    width: 32px;
-    margin: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
-    font-weight: bold;
-    border: none;
-    background-color: rgb(253, 105, 110);
-    color: beige;
+  height: 32px;
+  width: 32px;
+  margin: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  font-weight: bold;
+  border: none;
+  background-color: rgb(253, 105, 110);
+  color: beige;
 }
 
 #categorias-itens {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    background-color: transparent;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  background-color: transparent;
+  align-items: center;
 }
 
 .categoria {
-    font-size: 12px;
-    font-weight: bold;
-    height: 32px;
-    background-color: rgb(253, 105, 110);
-    border: none;
-    width: 240px;
-    margin: 8px 10px;
-    color: beige;
+  font-size: 12px;
+  font-weight: bold;
+  height: 32px;
+  background-color: rgb(253, 105, 110);
+  border: none;
+  width: 240px;
+  margin: 8px 10px;
+  color: beige;
 }
 
 #lista-produtos {
-    padding: 20px;
+  padding: 20px;
 }
 
 .produtos-grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px; /* Espaço entre os blocos de produtos */
-    justify-content: space-between; /* Distribui os itens uniformemente com espaçamento */
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; /* Espaço entre os blocos de produtos */
+  justify-content: space-between; /* Distribui os itens uniformemente com espaçamento */
 }
 
 .product-block {
-    background: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    width: calc(33.333% - 20px); /* Ajuste para permitir três colunas com espaçamento */
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box; /* Inclui o padding e a borda no cálculo da largura total */
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: calc(
+    33.333% - 20px
+  ); /* Ajuste para permitir três colunas com espaçamento */
+  text-align: center;
+  padding: 20px;
+  box-sizing: border-box; /* Inclui o padding e a borda no cálculo da largura total */
 }
 
 .product-block .image img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .product-block .meta {
-    padding: 10px;
+  padding: 10px;
 }
 
 .product-block .name {
-    font-size: 18px;
-    font-weight: bold;
-    margin: 10px 0;
+  font-size: 18px;
+  font-weight: bold;
+  margin: 10px 0;
 }
 
 .product-block .price {
-    font-size: 16px;
-    color: #000;
-    margin: 10px 0;
+  font-size: 16px;
+  color: #000;
+  margin: 10px 0;
 }
 
 .product-block .parcels {
-    font-size: 14px;
-    color: #666;
-    margin: 10px 0;
+  font-size: 14px;
+  color: #666;
+  margin: 10px 0;
 }
