--- a/src/main/resources/templates/notificacao/cadastrar_notificacao.html
+++ b/src/main/resources/templates/notificacao/cadastrar_notificacao.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" th:href="@{css/pico.min.css}">
-    <link rel="stylesheet" th:href="@{css/teste.css}">
-
-
-</head>
-<body>
+    <link rel="stylesheet" th:href="@{css/pico.min.css}" />
+    <link rel="stylesheet" th:href="@{css/teste.css}" />
+  </head>
+  <body>
     <div class="container">
-        <h1>Cadastrar Notificações</h1>
-        <form th:action="@{/armazenarNotificacao}" th:method="post">
-            <input type="hidden" th:name="id">
-            <br>
-            <label for="tipo">Tipo de Notificação</label>
-            <select th:name="tipo" id="selecione">
-                <option value="">Selecione</option>
-                <option value="Novidades">Novidades</option>
-                <option value="Promoções">Promoções</option>
-                <option value="Melhorias">Melhorias</option>
-                <option value="Alerta">Alerta</option>
-                <option value="Eventos">Eventos</option>
-            </select>   
+      <h1>Cadastrar Notificações</h1>
+      <form th:action="@{/armazenarNotificacao}" th:method="post">
+        <input type="hidden" th:name="id" />
+        <br />
+        <label for="tipo">Tipo de Notificação</label>
+        <select th:name="tipo" id="selecione">
+          <option value="">Selecione</option>
+          <option value="Novidades">Novidades</option>
+          <option value="Promoções">Promoções</option>
+          <option value="Melhorias">Melhorias</option>
+          <option value="Alerta">Alerta</option>
+          <option value="Eventos">Eventos</option>
+        </select>
 
-            <label for="prioridade">Nível de Prioridade</label>
-            <select th:name="prioridade" id="selecione">
-                <option value="">Selecione</option>
-                <option value="Alta">Alta</option>
-                <option value="Média">Média</option>
-                <option value="Baixa">Baixa</option>
-            </select>   
+        <label for="prioridade">Nível de Prioridade</label>
+        <select th:name="prioridade" id="selecione">
+          <option value="">Selecione</option>
+          <option value="Alta">Alta</option>
+          <option value="Média">Média</option>
+          <option value="Baixa">Baixa</option>
+        </select>
 
-            <label for="mensagem">Mensagem:</label>
-            <input type="text" th:name="mensagem">
+        <label for="mensagem">Mensagem:</label>
+        <input type="text" th:name="mensagem" />
 
-            <label for="criacao">Data de Criação:</label>
-            <input type="date" th:name="criacao"> 
+        <label for="criacao">Data de Criação:</label>
+        <input type="date" th:name="criacao" />
 
-            
-            <button type="submit">Cadastrar</button>
-        </form>
+        <button type="submit">Cadastrar</button>
+      </form>
     </div>
-</body>
+  </body>
 </html>
