--- a/src/main/resources/templates/produto/shop.html
+++ b/src/main/resources/templates/produto/shop.html
@@ -1,168 +1,234 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/shop.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
-    <link rel="manifest" href="icon/site.webmanifest">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/shop.css" />
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="icon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="icon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="icon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="icon/site.webmanifest" />
     <title>Shop</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="site">
-
-
-        <header>
-            <div id="container">
-                <div id="inner-container">
-
-                    <div id="menu">
-                        <ul id="lista-menu">
-                            <li class="menu-itens"><a th:href="@{/shop}">shop</a></li>
-                            <li class="menu-itens">arquivo</li>
-                            <li class="menu-itens"><a href="sobre.html">sobre</a></li>
-                        </ul>
-                    </div>
-
-                    <div id="logo-header">
-                        <a th:href="@{/home}">
-                            <img src="imagens/logo.png" alt="" id="imagem-logo-header">
-                        </a>
-                    </div>
-
-                    <div id="icones">
-                        <form class="search-form" th:action="@{/buscarProdutos}" th:method="POST">
-                            <input type="text" id="input-pesquisa" name="nome" class="search-input" placeholder="Buscar produtos...">
-                            <button type="submit" class="search-button">
-                                <svg xmlns="http://www.w3.org/2000/svg" height="1.5em" viewBox="0 0 512 512">
-                                    <path class="icon-path" d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
-                                </svg>
-                            </button>
-                        </form>
-                        
-                        <div id="login" class="icones-itens">
-                            <a th:href="@{/cadastrarUsuario}">
-                                <button type="button" class="icone-botao" id="icone-palhaco-container">
-                                    <img class="icone-palhaco" src="imagens/icone_palhaco01.png" alt="imagem default">
-                                </button>
-                            </a>
-                        </div>
-                        <div id="carrinho" class="icones-itens">
-                            <a href="carrinho.html">
-                                <button type="button" class="icone-botao">
-                                    <svg class="" xmlns="http://www.w3.org/2000/svg" height="1.5em"
-                                        viewBox="0 0 576 512">
-                                        <path class="cor"
-                                            d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z" />
-                                    </svg>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+      <header>
+        <div id="container">
+          <div id="inner-container">
+            <div id="menu">
+              <ul id="lista-menu">
+                <li class="menu-itens"><a th:href="@{/shop}">shop</a></li>
+                <li class="menu-itens">arquivo</li>
+                <li class="menu-itens"><a href="sobre.html">sobre</a></li>
+              </ul>
             </div>
-        </header>
 
-        <div id="meio">
-            <nav>
-                <div class="filtro-produto">
-                    <p class="titulo-filtro">TAMANHOS</p>
-                    <ul id="tamanhos-itens">
-                        <li><button type="button" class="tamanho">P</button></li>
-                        <li><button type="button" class="tamanho">M</button></li>
-                        <li><button type="button" class="tamanho">G</button></li>
-                        <li><button type="button" class="tamanho">GG</button></li>
-                        <li><button type="button" class="tamanho">XGG</button></li>
-                    </ul>
-                </div>
-                <div class="filtro-produto">
-                    <p class="titulo-filtro">CATEGORIAS</p>
-                    <ul id="categorias-itens">
-                        <li><button type="button" class="categoria">Camisetas</button></li>
-                        <li><button type="button" class="categoria">Bermudas e Shorts</button></li>
-                        <li><button type="button" class="categoria">Calças</button></li>
-                        <li><button type="button" class="categoria">Calçados</button></li>
-                        <li><button type="button" class="categoria">Jaquetas e Moletons</button></li>
-                        <li><button type="button" class="categoria">Acessórios</button></li>
-                        <li><button type="button" class="categoria">Bonés e Chapéus</button></li>
-                        <li><button type="button" class="categoria">Mochilas e Bolsas</button></li>
-                        <li><button type="button" class="categoria">Jóias</button></li>
+            <div id="logo-header">
+              <a th:href="@{/home}">
+                <img src="imagens/logo.png" alt="" id="imagem-logo-header" />
+              </a>
+            </div>
 
+            <div id="icones">
+              <form
+                class="search-form"
+                th:action="@{/buscarProdutos}"
+                th:method="POST"
+              >
+                <input
+                  type="text"
+                  id="input-pesquisa"
+                  name="nome"
+                  class="search-input"
+                  placeholder="Buscar produtos..."
+                />
+                <button type="submit" class="search-button">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    height="1.5em"
+                    viewBox="0 0 512 512"
+                  >
+                    <path
+                      class="icon-path"
+                      d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
+                    />
+                  </svg>
+                </button>
+              </form>
 
+              <div id="login" class="icones-itens">
+                <a th:href="@{/cadastrarUsuario}">
+                  <button
+                    type="button"
+                    class="icone-botao"
+                    id="icone-palhaco-container"
+                  >
+                    <img
+                      class="icone-palhaco"
+                      src="imagens/icone_palhaco01.png"
+                      alt="imagem default"
+                    />
+                  </button>
+                </a>
+              </div>
+              <div id="carrinho" class="icones-itens">
+                <a href="carrinho.html">
+                  <button type="button" class="icone-botao">
+                    <svg
+                      class=""
+                      xmlns="http://www.w3.org/2000/svg"
+                      height="1.5em"
+                      viewBox="0 0 576 512"
+                    >
+                      <path
+                        class="cor"
+                        d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
+                      />
+                    </svg>
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
 
-                    </ul>
-                </div>
-            </nav>
+      <div id="meio">
+        <nav>
+          <div class="filtro-produto">
+            <p class="titulo-filtro">TAMANHOS</p>
+            <ul id="tamanhos-itens">
+              <li><button type="button" class="tamanho">P</button></li>
+              <li><button type="button" class="tamanho">M</button></li>
+              <li><button type="button" class="tamanho">G</button></li>
+              <li><button type="button" class="tamanho">GG</button></li>
+              <li><button type="button" class="tamanho">XGG</button></li>
+            </ul>
+          </div>
+          <div class="filtro-produto">
+            <p class="titulo-filtro">CATEGORIAS</p>
+            <ul id="categorias-itens">
+              <li>
+                <button type="button" class="categoria">Camisetas</button>
+              </li>
+              <li>
+                <button type="button" class="categoria">
+                  Bermudas e Shorts
+                </button>
+              </li>
+              <li><button type="button" class="categoria">Calças</button></li>
+              <li><button type="button" class="categoria">Calçados</button></li>
+              <li>
+                <button type="button" class="categoria">
+                  Jaquetas e Moletons
+                </button>
+              </li>
+              <li>
+                <button type="button" class="categoria">Acessórios</button>
+              </li>
+              <li>
+                <button type="button" class="categoria">Bonés e Chapéus</button>
+              </li>
+              <li>
+                <button type="button" class="categoria">
+                  Mochilas e Bolsas
+                </button>
+              </li>
+              <li><button type="button" class="categoria">Jóias</button></li>
+            </ul>
+          </div>
+        </nav>
 
-
-
-            <div id="lista-produtos">
-    <div class="produtos-grid">
-        <!-- Loop para exibir cada produto -->
-        <div class="product-block" th:each="prod : ${productsList}">
-            <div class="image">
+        <div id="lista-produtos">
+          <div class="produtos-grid">
+            <!-- Loop para exibir cada produto -->
+            <div class="product-block" th:each="prod : ${productsList}">
+              <div class="image">
                 <a th:href="@{/detalhesProduto(id=${prod.id})}">
-                    <img th:src="@{/public/} + ${prod.imagem}"
-                    alt="" class="imagem-produto">                </a>
-            </div>
-            <div class="meta">
+                  <img
+                    th:src="@{/public/} + ${prod.imagem}"
+                    alt=""
+                    class="imagem-produto"
+                  />
+                </a>
+              </div>
+              <div class="meta">
                 <h3 class="name">
-                    <a th:href="@{/detalhesProduto(id=${prod.id})}" th:text="${prod.nome}"></a>
+                  <a
+                    th:href="@{/detalhesProduto(id=${prod.id})}"
+                    th:text="${prod.nome}"
+                  ></a>
                 </h3>
-                <p id="preco-produto" th:utext="'<s>' + 'R$ ' + ${prod.preco} + '</s>'"></p>
-                <p id="preco-produto" th:text="'R$ ' + ${prod.aplicarDesconto(10)} + ' à vista'"></p>
-                <p class="parcels"  th:text="${prod.calcularParcelas(2)}"></p>
+                <p
+                  id="preco-produto"
+                  th:utext="'<s>' + 'R$ ' + ${prod.preco} + '</s>'"
+                ></p>
+                <p
+                  id="preco-produto"
+                  th:text="'R$ ' + ${prod.aplicarDesconto(10)} + ' à vista'"
+                ></p>
+                <p class="parcels" th:text="${prod.calcularParcelas(2)}"></p>
+              </div>
             </div>
+          </div>
         </div>
-    </div>
-</div>
+      </div>
+
+      <footer>
+        <div id="esquerda-footer">
+          <div id="newsletter">
+            <p>newsletter</p>
+            <div id="newsletter-box">
+              <input
+                type="email"
+                name=""
+                id="email-newsletter"
+                placeholder="e-mail"
+              />
+              <button type="button" id="email-button">&#62;</button>
+            </div>
+          </div>
+
+          <div id="insta">
+            <img id="icon-insta" src="" alt="" />
+            <a id="link-insta" href="a">@kloun</a>
+          </div>
         </div>
 
+        <div id="logo-footer">
+          <img src="imagens/palhaco-logo.png" alt="" id="palhaco-logo" />
+        </div>
 
-        <footer>
-            <div id="esquerda-footer">
-                <div id="newsletter">
-                    <p>newsletter</p>
-                    <div id="newsletter-box">
-                        <input type="email" name="" id="email-newsletter" placeholder="e-mail">
-                        <button type="button" id="email-button">
-                            &#62;
-                        </button>
+        <div id="direita-footer">
+          <div>
+            <p class="endereco">BRASIL</p>
+            <p class="endereco">Itapetininga / SP</p>
+            <p class="endereco">Jardim Jardim</p>
+            <p class="endereco">Rua Dr. José Doutor, 1384</p>
+          </div>
 
-                    </div>
-                </div>
-
-                <div id="insta">
-                    <img id="icon-insta" src="" alt="">
-                    <a id="link-insta" href="a">@kloun</a>
-                </div>
-            </div>
-
-            <div id="logo-footer">
-                <img src="imagens/palhaco-logo.png" alt="" id="palhaco-logo">
-            </div>
-
-            <div id="direita-footer">
-                <div>
-                    <p class="endereco">BRASIL</p>
-                    <p class="endereco">Itapetininga / SP</p>
-                    <p class="endereco">Jardim Jardim</p>
-                    <p class="endereco">Rua Dr. José Doutor, 1384</p>
-                </div>
-
-                <div id="fale-conosco">
-                    <a href="">Fale conosco</a>
-                </div>
-            </div>
-        </footer>
-
+          <div id="fale-conosco">
+            <a href="">Fale conosco</a>
+          </div>
+        </div>
+      </footer>
     </div>
-</body>
-
+  </body>
 </html>
