--- a/src/main/resources/templates/usuario/ver_usuario.html
+++ b/src/main/resources/templates/usuario/ver_usuario.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" th:href="@{css/pico.min.css}">
-    <link rel="stylesheet" th:href="@{css/teste.css}">
-
-</head>
-<body>
+    <link rel="stylesheet" th:href="@{css/pico.min.css}" />
+    <link rel="stylesheet" th:href="@{css/teste.css}" />
+  </head>
+  <body>
     <div class="container">
-        <h2>User</h2>
-        <p>Email: <span th:text="${user.email}"></span></p>
-        <p>Senha: <span th:text="${user.senha}"></span></p>
-        <p>Nome: <span th:text="${user.nome}"></span></p>
-        <p>Sobrenome: <span th:text="${user.sobrenome}"></span></p>
-        <p>Nascimento: <span th:text="${user.nascimento}"></span></p>
-        <p>CPF: <span th:text="${user.cpf}"></span></p>
-        <p>Celular: <span th:text="${user.celular}"></span></p>
+      <h2>User</h2>
+      <p>Email: <span th:text="${user.email}"></span></p>
+      <p>Senha: <span th:text="${user.senha}"></span></p>
+      <p>Nome: <span th:text="${user.nome}"></span></p>
+      <p>Sobrenome: <span th:text="${user.sobrenome}"></span></p>
+      <p>Nascimento: <span th:text="${user.nascimento}"></span></p>
+      <p>CPF: <span th:text="${user.cpf}"></span></p>
+      <p>Celular: <span th:text="${user.celular}"></span></p>
     </div>
-</body>
+  </body>
 </html>
