--- a/src/main/resources/templates/produto/cadastrar_produto.html
+++ b/src/main/resources/templates/produto/cadastrar_produto.html
@@ -231,20 +231,15 @@
               <input type="text" th:name="nome" id="nome" />
             </div>
             <div class="item-cadastro">
-              <label for="descricao">Descrição</label>
-              <br />
-              <input type="text" th:name="descricao" id="descricao" />
-            </div>
-            <div class="item-cadastro">
               <label for="preco">Preço</label>
               <br />
               <input type="number" th:name="preco" id="preco" step="0.01" />
             </div>
             <div class="item-cadastro">
-              <label for="ficha-tecnica">Ficha Técnica</label>
+              <label for="descricao">Descrição</label>
               <br />
               <textarea
-                th:name="ficha-tecnica"
+                th:name="descricao"
                 rows="10"
                 id="ficha-tecnica"
               ></textarea>
